src/objects/Financial_Education__c.object
<CustomObject>
    <fields>
        <fullName>Attended_Financial_Education__c</fullName>
        <label>Attended Financial Education?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>Financial Education</relationshipLabel>
        <relationshipName>Financial_Education</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Attended__c</fullName>
        <label>Date Attended?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interested_in_Financial_Education__c</fullName>
        <label>Interested in Financial Education</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Account</label>
        <referenceTo>Loan_Account__c</referenceTo>
        <relationshipLabel>Financial Education</relationshipLabel>
        <relationshipName>Financial_Education</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Attended__c</fullName>
        <label>Organization Attended?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Financial Education</label>
    <nameField>
        <displayFormat>FEID-{0000000000}</displayFormat>
        <label>Financial Education ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>